# hometube

./: .gitignore  Pipfile  README.md  pyproject.toml
app/: crud.py  database.py  downloader.py  main.py  manager.py  models.py  notifier.py  schemas.py
src/: main.py
src/channels/: crud.py  models.py  router.py  schemas.py
src/core/: config.py  database.py
src/daemon/: crud.py  downloader.py  models.py  router.py  schemas.py  service.py
src/database/: database.py
src/files/: service.py
src/hometube/: main.py
src/hometube/presets/: crud.py  models.py  router.py  schemas.py
src/hometube/workers/: daemon.py  downloader.py
src/medias/: crud.py  models.py  router.py  schemas.py
src/presets/: crud.py  models.py  router.py  schemas.py  utils.py
src/workers/: daemon.py  downloader.py
src/ytdlp/: __init__.py  downloader.py  postprocessors.py  router.py  utils.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  index.tsx
ui/src/components/: ChannelAvatar.svelte  ChannelBanner.svelte  ChannelCard.svelte  Layout.tsx  MediaCard.svelte  MediaView.svelte  NavBar.tsx  PresetCard.svelte  Thumbnail.tsx
ui/src/interfaces/: Channel.interface.ts  Media.interface.ts  Preset.interface.ts  Task.interface.ts  Version.interface.ts
ui/src/pages/: HomePage.tsx  SearchModal.tsx  SettingPage.tsx  VideoDetailPage.tsx
ui/src/routes/: +layout.svelte  SideBar.svelte  TopBar.svelte  styles.css
ui/src/routes/activity/: +page.svelte
ui/src/routes/channels/: +page.svelte
ui/src/routes/settings/: +page.svelte
ui/src/routes/watch/: +page.svelte
(+3 files in other folders)
